--- a/src/app/component/products/checkout/checkout.component.html
+++ b/src/app/component/products/checkout/checkout.component.html
@@ -32,6 +32,8 @@
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="Card Number"
         required
+        pattern="^\d{16}$"
+        max="16"
       />
     </div>
     <div class="mb-4">
@@ -51,7 +53,7 @@
         >Expiry Date</label
       >
       <input
-        type="text"
+        type="date"
         id="expiry"
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="MM/YY"
@@ -68,6 +70,8 @@
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         placeholder="CVV"
         required
+        maxlength="3"
+        pattern="^\d{3}$"
       />
     </div>
     <button
